--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="container">
-        <img src="C:\Users\ampri\OneDrive\Desktop\Pixy Page\images\Logo.jpg"
+        <img src="images/Logo.jpg" alt="logo" class="logo"
         width="222" height="222">
 
         <nav>
