--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="container">
-        <img src=a url="C:\Users\ampri\OneDrive\Desktop\Pixy Page\images\Logo.jpg"
+        <img src=a href="C:\Users\ampri\OneDrive\Desktop\Pixy Page\images\Logo.jpg"
         width="222" height="222">
 
         <nav>
