--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First HTML Project</title>
     <link rel="stylesheet" href="./styles/style.css">
@@ -9,7 +10,7 @@
 <body>
 <header>
     <div class="container">
-        <img src=a href="C:\Users\ampri\OneDrive\Desktop\Pixy Page\images\Logo.jpg"
+        <img src="./images/Logo.jpg" alt="logo" class="logo"
         width="222" height="222">
 
         <nav>
