--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@ width="350" height="450">
 <img src="./images/Tyson.jpg" alt="big head" width="250" height="450">
 <img src="./images/UpsideDownPippin.jpg" alt="rolling corgi" width="250" height="450">
 <img src="./images/YawningSalem.jpg" alt="yawning black cat" width="300" height="250">
-
 <video 
 src="./images/WiggleButtMaGee.mp4"
 height="350"
 controls
+autoplay
 muted>
 </video>
 <footer>
