--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ muted>
 <footer>
     <h6><strong><em>Welcome to Our Family</em></strong></h6>
 </footer>
-  <script>  
+ <script src="script.js"></script>  
 
 function updateurgency() {
     const newValue = document.querySelector('.js-urgency').value;
@@ -210,7 +210,7 @@ function updateurgency() {
 }
 
 document.querySelector('.js-urgency').addEventListener('change', updateurgency);
-  </script>
+
   <style>
     body {
     margin: 0;
