--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="./gallery/images.html">Gallery</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#">Testimonials</a></li>
-                <li><a href="./contact/contactform.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </div>
