--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Testimonials</a></li>
