--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="./gallery/images.html">Gallery</a></li>
                 <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contract.contractform">Contact</a></li>
             </ul>
         </nav>
     </div>
